--- a/package.json
+++ b/package.json
@@ -10,8 +10,14 @@
     "host": "astro dev --host --port=80"
   },
   "dependencies": {
+    "@astrojs/react": "^4.1.4",
     "@astrojs/tailwind": "^5.1.4",
+    "@types/react": "^19.0.7",
+    "@types/react-dom": "^19.0.3",
     "astro": "^5.1.6",
+    "pocketbase": "^0.25.0",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
